--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
-<html>
-<h1> Rajiv Dutt</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="./External/CSS/Grid.css">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <title>Home</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <div class="row">
+                <img src="Images/logo.gif" alt="India logo" class="logo-img">
+                <div class="logo"> Incredible India</div>
+                <ul class="main-nav">
+                    <li> <a href="index.html">Home</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="travel.html">Travel</a></li>
+                    <li><a href="mCities.html">Cities</a></li>
+
+                </ul>
+
+            </div>
+        </nav>
+        <div class="india-text-box">
+            <h1>Land of Festivals</h1>
+            <a class="btn btn-full " href="history.html">HISTORY</a>
+            <a class="btn btn-ghost " href="mCities.html">MAJOR CITIES</a>
+        </div>
+
+    </header>
+
+
+</body>
+
 </html>
