--- a/EBK/News.html
+++ b/EBK/News.html
@@ -10,25 +10,25 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>EBK NEWS</title>
 </head>
 <body>
       <header>
             <section class="section-news">
-                    <h2> NEWS </h2>
+                    <h2> Education Bank Khanna  NEWS </h2>
                     
                     <section class="grid">
                         <div class="box box11">
-                            <a href="#"><img src="./images/1.jpg"><span>News1</span></a>
+                            <a href="#"><img src="./images/1.jpg"><span></span></a>
                         </div>
                         <div class="box box12">
-                            <a href="#"><img src="./images/2.jpg"><span>News2</span></a>
+                            <a href="#"><img src="./images/4.jpg"><span></span></a>
                         </div>
                         <div class="box box13">
-                            <a href="#"><img src="./images/3.jpg"><span>News3</span></a>
+                            <a href="#"><img src="./images/3.jpg"><span></span></a>
                         </div>
-                        <div class="box box14">
-                            <a href="#"><img src="./images/4.jpg"><span>News4</span></a>
+                        <div class="box-box14">
+                            <a href="#"><img src="./images/2.jpg"><span></span></a>
                         </div>
                     </section>
     
