--- a/EBK/index.html
+++ b/EBK/index.html
@@ -22,9 +22,9 @@
         <div class="education-bank">
                                    <h2>Our goal is to provide education and required material to children for their studies withot any
                                 interruption .</h2>
-                                <p>“A Child without Education is like A bird without wings" </p>
+                                <p>A Child without Education is like A bird without wings </p>
                                 <div class="quotes">
-                                <p>“Education is the most powerful weapon which you can use to change the world.--- Nelson Mandela ”</p>
+                                <p>Education is the most powerful weapon which you can use to change the world.--- Nelson Mandela </p>
                            </div>
                            </div>
 
