project update font

--- a/travel.html
+++ b/travel.html
@@ -13,7 +13,7 @@
     <header class="other">
         <nav>
             <div class="row">
-                <img src="Images/logo.png" alt="India logo" class="logo-img">
+                <img src="Images/logo.gif" alt="India logo" class="logo-img">
                 <div class="logo">
                     Incredible India
                 </div>
