--- a/mCities.html
+++ b/mCities.html
@@ -14,7 +14,7 @@
     <header class="other">
         <nav>
             <div class="row">
-                <img src="Images/logo.png" alt="India logo" class="logo-img">
+                <img src="Images/logo.gif" alt="India logo" class="logo-img">
                 <div class="logo"> Incredible India</div>
                 <ul class="main-nav js--main-nav">
                     <li> <a href="index.html">Home</a></li>
