--- a/history.html
+++ b/history.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./CSS/style.css">
     <link rel="stylesheet" type="text/css" href="./External/CSS/Grid.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="./CSS/images/flag" />
     <title>History</title>
 </head>
 
@@ -13,7 +14,7 @@
     <header class="other">
         <nav>
             <div class="row">
-                <img src="Images/logo.png" alt="India logo" class="logo-img">
+                <img src="Images/logo.gif" alt="India logo" class="logo-img">
                 <div class="logo">
                     Incredible India
                 </div>
