--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./CSS/style.css">
     <link rel="stylesheet" type="text/css" href="./External/CSS/Grid.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="./CSS/images/flag" />
     <title>Home</title>
 </head>
 
