--- a/mCities.html
+++ b/mCities.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="./CSS/style.css">
     <link rel="stylesheet" type="text/css" href="./External/CSS/Grid.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
-    <title>Major</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./CSS/images/flag" />
+    <title>Major Cities</title>
 </head>
 
 <body>
