--- a/EBK/index.html
+++ b/EBK/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/bookico.png" />
     <title>WelCome to Education Bank Khanna</title>
 </head>
 <body>
