--- a/EBK/News.html
+++ b/EBK/News.html
@@ -18,7 +18,7 @@
                     <div class="row">
                        
                         <ul class="main-nav">
-                            <li>  <image src="./images/book1.gif" alt="Education Bank Khanna" class="logo-img"></image>
+                            <li>  <image src="./images/book.png" alt="Education Bank Khanna" class="logo-img"></image>
                                 <div class="logo"> Education Bank Khanna</div></li>
                                 <div class="menu">
                             <li> <a href="index.html"> Home</a></li>
