--- a/EBK/index.html
+++ b/EBK/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./images/bookico.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="./images/book.png" />
     <title>WelCome to Education Bank Khanna</title>
 </head>
 <body>
@@ -17,7 +17,8 @@
                         <div class="menu">
                     <li> <a href="index.html"> Home</a></li>
                     <li> <a href="pictures.html"> Pictures</a> </li>
-                    <li> <a href="News.html"> NEWS </a></li>
+                    <li> <a href="News.html"> News </a></li>
+                    <li> <a href="contact.html"> Contact </a></li>
                         </div>
 
                 </ul>
