--- a/EBK/News.html
+++ b/EBK/News.html
@@ -23,7 +23,8 @@
                                 <div class="menu">
                             <li> <a href="index.html"> Home</a></li>
                             <li> <a href="pictures.html"> Pictures</a> </li>
-                            <li> <a href="News.html"> NEWS </a></li>
+                            <li> <a href="News.html"> News </a></li>
+                            <li> <a href="contact.html"> Contact </a></li>
                                 </div>
         
                         </ul>
