--- a/EBK/index.html
+++ b/EBK/index.html
@@ -12,7 +12,7 @@
             <div class="row">
                
                 <ul class="main-nav">
-                    <li>  <image src="./images/book.png" alt="Education Bank Khanna" class="logo-img"></image>
+                    <li>  <image src="./images/book.png" alt="Education Bank Khanna" class="logo-img"></image></li>
                         <div class="logo"> Education Bank Khanna</div></li>
                         <div class="menu">
                     <li> <a href="index.html"> Home</a></li>
@@ -30,7 +30,7 @@
     
     <div class="education-bank">
         <h2>Our goal is to provide education and required material to children for their studies withot any
-     interruption .</h2>
+     interruption</h2>
      <p>A Child without Education is like A bird without wings </p>
      <div class="quotes">
      <p>Education is the most powerful weapon which you can use to change the world.--- Nelson Mandela </p>
