--- a/EBK/index.html
+++ b/EBK/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="./images/book.png" />
+   
     <title>WelCome to Education Bank Khanna</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
             <div class="row">
                
                 <ul class="main-nav">
-                    <li>  <image src="./images/book.png" alt="Education Bank Khanna" class="logo-img"></image></li>
+                    <li>  <image src="./images/book.png" alt="Education Bank Khanna" class="logo-img"></image>
                         <div class="logo"> Education Bank Khanna</div></li>
                         <div class="menu">
                     <li> <a href="index.html"> Home</a></li>
