--- a/EBK/News.html
+++ b/EBK/News.html
@@ -74,5 +74,13 @@
                     
                 </section>
       </header>
+
+      <footer>
+        <div class="row">
+            <div class="column">
+                <p>&copy; <span id="copy-year"></span>Education Bank Khanna | All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
