update dec20 2nd

--- a/EBK/News.html
+++ b/EBK/News.html
@@ -66,6 +66,8 @@
                                 
                                </li>
                                <li> <a href="#"><img   class="Gallery" src="./images/news/p10.jpg"><span></span></a></li>
+                               <li> <a href="#"><img   class="Gallery" src="./images/news/p11.png"><span></span></a></li>
+                               <li> <a href="#"><img   class="Gallery" src="./images/news/p12.png"><span></span></a></li>
 
                                </ul>
                             
