--- a/EBK/contact.html
+++ b/EBK/contact.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>WelCome to Education Bank Khanna</title>
+  <script>
+        window.onload = function()
+    {
+      document.getElementById("copy-year").innerHTML = new Date().getFullYear();
+    }
+  </script>
 </head>
 <body>
     <header class="other">
@@ -95,7 +101,7 @@
     <footer>
         <div class="row">
             <div class="column">
-                <p>&copy; <span id="copy-year"></span>Education Bank Khanna | All Rights Reserved.</p>
+                <p>&copy; <span id="copy-year"></span> Education Bank Khanna | All Rights Reserved.</p>
             </div>
         </div>
     </footer>
