--- a/EBK/News.html
+++ b/EBK/News.html
@@ -11,6 +11,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EBK NEWS</title>
+    <script>
+        window.onload = function()
+    {
+      document.getElementById("copy-year").innerHTML = new Date().getFullYear();
+    }
+  </script>
 </head>
 <body>
       <header class="other">
@@ -80,7 +86,7 @@
       <footer>
         <div class="row">
             <div class="column">
-                <p>&copy; <span id="copy-year"></span>Education Bank Khanna | All Rights Reserved.</p>
+                <p>&copy; <span id="copy-year"></span>  Education Bank Khanna | All Rights Reserved.</p>
             </div>
         </div>
     </footer>
