--- a/EBK/index.html
+++ b/EBK/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="script1.js"></script>
    
     <title>WelCome to Education Bank Khanna</title>
 </head>
@@ -12,7 +13,7 @@
             <div class="row">
                
                 <ul class="main-nav">
-                    <li>  <image src="./images/book.png" alt="Education Bank Khanna" class="logo-img"></image>
+                    <li>  <image src="./images/logo.svg" alt="Education Bank Khanna" class="logo-img"></image>
                         <div class="logo"> Education Bank Khanna</div></li>
                         <div class="menu">
                     <li> <a href="index.html"> Home</a></li>
@@ -29,7 +30,7 @@
     </header>
     
     <div class="education-bank">
-        <h2>Our goal is to provide education and required material to children for their studies withot any
+        <h2>Our goal is to provide education and required material to children for their studies without any
      interruption</h2>
      <p>A Child without Education is like A bird without wings </p>
      <div class="quotes">
