--- a/EBK/pictures.html
+++ b/EBK/pictures.html
@@ -17,7 +17,7 @@
             <div class="row">
                
                 <ul class="main-nav">
-                    <li>  <image src="./images/Logo.svg" alt="Education Bank Khanna" class="logo-img"></image>
+                    <li>  <image src="./images/logo.svg" alt="Education Bank Khanna" class="logo-img"></image>
                         <div class="logo"> Education Bank Khanna</div></li>
                         
                         <div class="menu">
